finish the landing page, spacing issues will be fixed later

--- a/style.css
+++ b/style.css
@@ -142,3 +142,55 @@ button {
     font-weight: 600;
     text-align: end;
 }
+
+.test {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+}
+
+.action-part {
+    background-color: #3882F6;
+    border-radius: 15px;
+    max-width: 900px;
+    display: flex;
+    align-items: center;
+    padding: 25px 130px;
+}
+
+.call-to-action {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin: 15px;
+}
+
+#action1, #action2 {
+    color: white;
+    margin: 0;
+}
+
+#action1 {
+    font-size: 17px;
+    font-weight: 600;
+}
+
+#action-sign {
+    border: 2px  solid #ffffff;
+    border-radius: 10px;
+    height: 30px;
+    width: 120px;
+    padding: 0;
+    font-size: 17px;
+    margin-left: 70px;
+}
+
+.footer {
+    align-items: center;
+}
+
+h4 {
+    font-weight: 500;
+}
